--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container-fluid no_padding" style="min-height:40vh;margin:20px auto 0px auto;position:relative;">
+  <div class="container-fluid no_padding" style="min-height:40vh;position:relative;">
     <img src="/static/images/24tut/7.png" class="bg on_left" width="10%">
     <img src="/static/images/24tut/r_side.png" class="bg on_right" width="10%">
 
@@ -95,8 +95,8 @@
           <h4 class="text-muted">Company</h4>
           <li><a href="/about">About US</a></li>
           <!-- <li><a href="">Talk To Us</a></li> -->
-          <li><a href="">Contact Us </a></li>
-          <li><a href="">Help</a></li>
+          <li><a href="/contact">Contact Us </a></li>
+          <!-- <li><a href="">Help</a></li> -->
           <li><a href="/career">Careers</a></li>
           <li><a href="/services">Services </a></li>
         </ul>
