--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -62,7 +62,7 @@
           </ul>
         </li> -->
         <li class="header_element">
-          <a href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" style="color:#fff;"><i class="fa fa-key fa-fw" aria-hidden="true"></i>Sign in</a>
+          <a  ng-click="signin()" href="" ng-mouseleave="show[4]=false" ng-mouseover="show[4]=true" class="nav_ele"><i class="fa fa-key fa-fw" aria-hidden="true" ></i>Sign in</a>
         </li>
       </ul>
     </div>
