--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -767,7 +767,8 @@
 .nc_links li a {
   color: #fff;
 }
-.nc_links:nth-child(2){
+
+.nc_links:nth-child(2) {
   margin-top: 89px;
 }
 
@@ -1154,12 +1155,14 @@ hr {
   padding: 2px 16px;
   margin-bottom: 3em;
 }
+
 .body1 {
   padding: 2px 16px;
   margin-bottom: 3em;
 }
-.cardstype:hover .body1 h4{
-  color:#02EBA3;
+
+.cardstype:hover .body1 h4 {
+  color: #02EBA3;
 }
 
 .table-align {
@@ -1555,11 +1558,13 @@ hr {
   font-size: 16px;
   font-weight: bold;
 }
+
 .alignintable tr td {
   width: 3%;
 }
-.alignintable tr .tablehead{
-  width:12%;
+
+.alignintable tr .tablehead {
+  width: 12%;
 }
 
 .clickchange {
@@ -1583,7 +1588,7 @@ hr {
   font-size: 20px;
 }
 
-.clickchange:hover ,.clickchange .triangle-hover,.clickchange .triangle-hover1 {
+.clickchange:hover, .clickchange .triangle-hover, .clickchange .triangle-hover1 {
   color: #000;
   cursor: pointer;
 }
@@ -1603,6 +1608,7 @@ hr {
   top: 43px;
   left: 80px;
 }
+
 .triangle-hover1 {
   width: 0;
   height: 0;
@@ -1620,68 +1626,74 @@ hr {
   background-color: #01EDA5;
   color: #fff;
   border-radius: 10px;
-  position:relative;
+  position: relative;
 }
+
 .headblocklast {
   margin-top: 2em;
   padding: 1em 1em 1em 1em;
   background-color: #FAFAFA;
   color: #C9C9C9;
   border-radius: 10px;
-  position:relative;
+  position: relative;
 }
 
 .contentblock {
   margin: 1em 1em;
 }
+
 .contentblocklast {
   margin: 1em 1em;
 }
-
 
 .contentblock div {
   border-top: 1px solid #ddd;
   padding: 1em 0 0.5em 0;
 }
+
 .contentblock .firstchild {
-  border-top:0;
+  border-top: 0;
 }
+
 .contentblocklast .firstchild {
-  border-top:0;
+  border-top: 0;
 }
+
 .contentblocklast div {
   border-top: 1px solid #ddd;
   padding: 1em 0 0.5em 0;
 }
-.contentborder::before{
-  content:'';
-  border-left:1px solid #CACACA;
-  position:absolute;
-  top:3.3em;
-  left:-2em;
-  height:100%;
 
-
+.contentborder::before {
+  content: '';
+  border-left: 1px solid #CACACA;
+  position: absolute;
+  top: 3.3em;
+  left: -2em;
+  height: 100%;
 }
-.roundcircle{
-  position:absolute;
+
+.roundcircle {
+  position: absolute;
   top: 1.6em;
   left: -2.7em;
-  width:20px;
-  height:20px;
-  border-radius:10px;
-  border:4px solid #01EDA5;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  border: 4px solid #01EDA5;
 }
-.roundcirclelast{
-  position:absolute;
+
+.roundcirclelast {
+  position: absolute;
   top: 1.6em;
   left: -2.7em;
-  width:20px;
-  height:20px;
-  border-radius:10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
   background-color: #C9C9C9;
-  border:4px solid #C9C9C9;
+  border: 4px solid #C9C9C9;
 }
+
 .cardstype {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   /* transition: 0.3s; */
@@ -1692,40 +1704,73 @@ hr {
   min-height: 41vh;
   background-color: #fff;
 }
+
 .img-radiuss {
-    border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0;
 }
+
 /* .cardstype:hover .img-radiuss{
   border-top-left-radius:  50px;
 
 } */
-.cardstype:hover{
-  border-top-left-radius:  50px;
+.cardstype:hover {
+  border-top-left-radius: 50px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   transform: scale(1.1);
   transition: 0.2s;
 }
-.rightborder{
-  border-right:1px solid #9E9E9E;
+
+.rightborder {
+  border-right: 1px solid #9E9E9E;
 }
-.titlesize{
-  font-size:25px;
+
+.titlesize {
+  font-size: 25px;
 }
-.titleicon{
-  position:absolute;
-  top:1em;
-  right:5em;
+
+.titleicon {
+  position: absolute;
+  top: 1em;
+  right: 5em;
 }
-.right_on{
+
+.right_on {
   text-align: center;
 }
+
+.cardforstu {
+  margin-top: 3em;
+  width: 90%;
+  padding-bottom: 2em;
+}
+
+.cardforstu:hover {
+  background-color: #fff;
+  box-shadow: 0px 0px 1px #ddd, 0 4px 20px #ccc;
+  border-top-left-radius: 30px;
+}
+.stublock1 {
+  position: relative;
+}
+
+.viewstudent1 {
+  position: absolute;
+  top: -2em;
+  right: 5em;
+  display: none;
+  padding-top: 3em;
+}
+
+.cardforstu:hover .viewstudent1 {
+  display: block;
+}
+
 /*  blogs css starts here*/
 .blog_container {
   display: flex;
   display: -webkit-flex;
   width: 100%;
 }
-
 
 .genericHeading {
   text-align: center;
@@ -1741,8 +1786,8 @@ hr {
   cursor: pointer;
   background-color: #000;
 }
-/*  blogs css ends here*/
 
+/*  blogs css ends here*/
 /* for normal screens ends here.... */
 @media only screen and (device-width : 1352px) and (device-height : 641px) {
 
@@ -1916,8 +1961,6 @@ hr {
   margin-left: -15px;
 }
 
-
-
 /* .video-border {
   display: flex;
   width: 100px;
@@ -1934,78 +1977,97 @@ hr {
 @media only screen and (max-width:768px) {
 
   /* mobile display size starts here.... */
+  /* courses */
+  .viewstudent1 {
+    position: absolute;
+    top: -2em;
+    right: 3.1em;
+    display: none;
+    padding-top: 3em;
+  }
+  .cardforstu {
+    margin-top: 3em;
+    width: 100%;
+    padding-bottom: 2em;
+  }
 
- /* courses */
- .right_on{
-   text-align: right;
- }
- .roundcircle{
-   position:absolute;
-   top: 1.6em;
-   left: -2.7em;
-   width:0px;
-   height:0px;
-   border-radius:10px;
-   border:0;
- }
- .roundcirclelast{
-   position:absolute;
-   top: 1.6em;
-   left: -2.7em;
-   width:0px;
-   height:00px;
-   border-radius:10px;
-   background-color: #C9C9C9;
-   border:4px solid #C9C9C9;
- }
- .contentborder::before{
-   content:'';
-   border-left:0;
- }
- .contentborderlast::before{
-   content:'';
-   border-left:0;
- }
- .titleicon{
-   position:absolute;
-   top:1em;
-   right:1em;
- }
- .titlesize{
-   font-size:20px;
- }
- .rightborder{
-   border-right:0;
- }
- .clickchange {
-   border-right:0;
-   text-align: center;
-   margin-top: 2.5em;
-   color: #fff
- }
+  .right_on {
+    text-align: right;
+  }
 
- .cardstype {
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-   /* transition: 0.3s; */
-   text-align: center;
-   margin-left: 0;
-   width: 100%;
-   border-radius: 5px;
-   min-height: 41vh;
-   background-color: #fff;
- }
- .smdevice{
-   margin-top:2em;
- }
- .alignintable tr .tablehead{
-   width:25%;
- }
- /*  */
+  .roundcircle {
+    position: absolute;
+    top: 1.6em;
+    left: -2.7em;
+    width: 0px;
+    height: 0px;
+    border-radius: 10px;
+    border: 0;
+  }
 
+  .roundcirclelast {
+    position: absolute;
+    top: 1.6em;
+    left: -2.7em;
+    width: 0px;
+    height: 00px;
+    border-radius: 10px;
+    background-color: #C9C9C9;
+    border: 4px solid #C9C9C9;
+  }
 
+  .contentborder::before {
+    content: '';
+    border-left: 0;
+  }
 
+  .contentborderlast::before {
+    content: '';
+    border-left: 0;
+  }
+
+  .titleicon {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+  }
+
+  .titlesize {
+    font-size: 20px;
+  }
+
+  .rightborder {
+    border-right: 0;
+  }
+
+  .clickchange {
+    border-right: 0;
+    text-align: center;
+    margin-top: 2.5em;
+    color: #fff
+  }
+
+  .cardstype {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    /* transition: 0.3s; */
+    text-align: center;
+    margin-left: 0;
+    width: 100%;
+    border-radius: 5px;
+    min-height: 41vh;
+    background-color: #fff;
+  }
+
+  .smdevice {
+    margin-top: 2em;
+  }
+
+  .alignintable tr .tablehead {
+    width: 25%;
+  }
+
+  /*  */
   /* students */
-
   .courses1 ul li {
     font-size: 17px;
     color: #fff;
@@ -2121,7 +2183,6 @@ hr {
     min-height: 41vh;
     background-color: #fff;
   }
-
 
   .likecard {
     background-color: #FAFAFA;
