--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -185,6 +185,7 @@
       var SERVICE_NAME = "{{serviceName}}";
       var DEFAULT_ROUTE = "{{defaultRoute}}";
       var SHOW_COMMON_APPS = {{showCommonApps}};
+      var ORDERS_STATUS_LIST = {{ORDERS_STATUS_LIST|safe}};
     </script>
     <script src="{% static 'js/custom/wampProcessors.js' %}"></script>
     <script src="{% static 'js/custom/nativeJS.js' %}"></script>
