--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -214,6 +214,7 @@
   transition: all .200s ease-in-out;
   moz-transition: all .4s ease-in-out;
   -webkit-transition: all .9s ease-in-out;
+  cursor: pointer;
 }
 
 .btn_gradient:hover {
