--- a/libreERP/templates/ngBase.html
+++ b/libreERP/templates/ngBase.html
@@ -97,7 +97,7 @@
     <div flash-message="4000" style="position:fixed;top:70px;right:10px;z-index:9999;min-width:300px;"></div>
 
     {% verbatim %}
-    <div  id="sideMenu" style="{{sideMenuVisibility ? 'width:13%': 'width:5%;'}};{{mobileView ? 'width:31%': ';'}};background:linear-gradient(100deg, #e9dddd 0%, #fff 51%, #fff 75%);min-height:100vh;position:fixed;border-right:solid 2px  var(--themeMain);z-index:100" class="sideMenuView" ng-include="sideMenu">
+    <div  id="sideMenu" style="{{sideMenuVisibility ? 'width:13%': 'width:5%;'}};{{mobileView ? 'width:31%': ';'}};background:var(--themeMain);min-height:100vh;position:fixed;border-right:solid 2px  var(--themeMain);z-index:100" class="sideMenuView" ng-include="sideMenu">
     </div>
 
   <div class="col-md-1 mainUIViewParent" id="mainUIParent" style="{{sideMenuVisibility ? 'width:87%': 'width:95%;'}};{{mobileView ? 'width:70%': ';'}}; padding:0px;right:0px;position:absolute;">
