--- a/HR/static/css/app.HR.css
+++ b/HR/static/css/app.HR.css
@@ -1,10 +1,10 @@
 .nav-sidebar-inverse> li > a {
-  color:white;
-  border-right: solid 6px var(--themeMain);
+  color:var(--themeMain);
+  border-right: solid 6px white;
 }
 
 .nav-sidebar-inverse> li > a:hover, .nav-sidebar-inverse > li >a:focus , .nav-sidebar-inverse> .active > a{
-	background: rgba(0, 0, 0, 0.2) none repeat scroll 0% 0%;
-  border-right: solid 6px white;
-	color: #fff;
+	background: white;
+  border-right: solid 6px var(--headerNavbarHighlight);;
+	color: var(--themeMain);
 }
